--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "chai": "^4.1.1",
     "mocha": "^3.5.0",
     "nodemon": "^1.11.0",
+    "pryjs": "^1.0.3",
     "request": "^2.81.0"
   }
 }
