--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Benjaminpjacobs/quantified-self-express-api#readme",
   "dependencies": {
+    "cors": "^2.8.4",
     "express": "^4.15.4",
     "knex": "^0.13.0",
     "pg": "^7.2.0"
