fixes put request to use body parser

--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "homepage": "https://github.com/Benjaminpjacobs/quantified-self-express-api#readme",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "cors": "^2.8.4",
     "express": "^4.15.4",
     "knex": "^0.13.0",
-    "pg": "^7.2.0"
+    "pg": "^7.2.0",
+    "pryjs": "^1.0.3"
   },
   "devDependencies": {
     "chai": "^4.1.1",
